<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.admin.t5bmsemana2.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strdestino" />

        <Spinner
            android:id="@+id/spnDestino"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:entries="@array/strciudades" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strlinea" />

        <RadioGroup
            android:id="@+id/rdgLinea"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbtLan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/strlan" />

            <RadioButton
                android:id="@+id/rbtAvianca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/stravianca" />

            <RadioButton
                android:id="@+id/rbtChosicano"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/strchosica" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strpasajero" />

        <EditText
            android:id="@+id/edtPasajero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/chkDescuento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/strdescu" />

        <CheckBox
            android:id="@+id/chkIgv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/strigv" />

        <Button
            android:id="@+id/btnReservar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/straceptar" />
    </LinearLayout>
</RelativeLayout>
